# dockerized_assistant

./: .gitignore  Dockerfile  LICENSE  README.md  notes.json  pyproject.toml  requirements.txt  setup.py
src/: bot.py  contact_book.json  error_handler.py  file_config.py  globals.py  main.py  record.py  user_actions_handler.py
src/address_book/: contact_book.py
src/notes/: note_book.py
src/sort_file/: generator.py  normalize.py  scan.py  sort.py
src/sort_file/Temp/folder/: ]б3СсЙиП.tar
src/sort_file/Temp/folder/OMG/temp/folder/: Yй-7тчЗ,.tar
src/sort_file/Temp/folder/OMG/temp/no_way/: F]G[НЦ`ж.tar
src/sort_file/Temp/folder/OMG/temp/no_way/folder/: @ivЖ-ed[.tar
src/sort_file/Temp/folder/OMG/temp/temp/temp/temp/: cвj-ащl].tar  е``[~@іл.tar
src/sort_file/Temp/folder/temp/find_it/folder/folder/: рM-е,иIЛ.txt
src/sort_file/Temp/folder/temp/folder/temp/: HXDйщаPY.tar  HзyмУИзo.tar  LС2bГcHл.tar
src/sort_file/Temp/folder/temp/folder/temp/folder/: LжгТу-BM.tar  XlбЖ,CUХ.tar
src/sort_file/Temp/folder/temp/folder/temp/folder/temp/: 0ЧшlT}qв.tar
src/utils/: constants.py  parser.py
